# Geant4-Fast-Parameterisation-Models

./: .gitignore  .gitmodules  CLAUDE.md  LICENSE  README.md  environment.yml
studies/gammaConversion/: CMakeLists.txt  README.md  build.sh  gammaConversion.cc  run_materials.sh
studies/gammaConversion/config/: default.cfg
studies/gammaConversion/include/: ConvActionInitialization.hh  ConvConfig.hh  ConvDetectorConstruction.hh  ConvEventAction.hh  ConvLogger.hh  ConvPhysicsList.hh  ConvPrimaryGeneratorAction.hh  ConvRunAction.hh  ConvStackingAction.hh  ConvSteppingAction.hh
studies/gammaConversion/src/: ConvActionInitialization.cc  ConvConfig.cc  ConvDetectorConstruction.cc  ConvEventAction.cc  ConvLogger.cc  ConvPhysicsList.cc  ConvRunAction.cc  ConvSteppingAction.cc
studies/gammaConversion/training/: Z-conditioning.md
studies/gammaConversion/training/resources/: README.md
studies/gammaConversionSi/: CMakeLists.txt  README.md  build.sh  gammaConversionSi.cc  vis.mac
studies/gammaConversionSi/benchmark/: fast.cfg  full.cfg  run_benchmark.sh  summarise.py
studies/gammaConversionSi/config/: default.cfg  mono1GeV.cfg
studies/gammaConversionSi/include/: ConvActionInitialization.hh  ConvConfig.hh  ConvDetectorConstruction.hh  ConvEventAction.hh  ConvFastSimModel.hh  ConvLogger.hh  ConvPhysicsList.hh  ConvPrimaryGeneratorAction.hh  ConvRunAction.hh  ConvStackingAction.hh  ConvSteppingAction.hh  ConversionFlowInference.hh
studies/gammaConversionSi/src/: ConvActionInitialization.cc  ConvConfig.cc  ConvDetectorConstruction.cc  ConvEventAction.cc  ConvFastSimModel.cc  ConvLogger.cc  ConvPhysicsList.cc  ConvPrimaryGeneratorAction.cc  ConvRunAction.cc  ConvStackingAction.cc  ConvSteppingAction.cc  ConversionFlowInference.cc
studies/gammaConversionSi/training/: Flow.md  README.md  conversion_data.py  conversion_dnn.py  conversion_flow.py  explore_ntuple.ipynb  export_flow_onnx.py  train_dnn.ipynb  train_flow.ipynb
